[gd_scene load_steps=19 format=2]

[ext_resource path="res://tres/theme_dark.tres" type="Theme" id=1]
[ext_resource path="res://scenes/core/Canvas.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/graphics/transparent_bg.png" type="Texture" id=3]
[ext_resource path="res://scenes/core/Editor.gd" type="Script" id=4]
[ext_resource path="res://scenes/core/Palette.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/graphics/icon_pen.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/icon_select.png" type="Texture" id=7]
[ext_resource path="res://assets/graphics/icon_eraser.png" type="Texture" id=8]
[ext_resource path="res://assets/graphics/icon_eyedropper.png" type="Texture" id=9]
[ext_resource path="res://assets/graphics/icon_line.png" type="Texture" id=10]
[ext_resource path="res://assets/graphics/icon_move.png" type="Texture" id=11]
[ext_resource path="res://assets/graphics/icon_bucket.png" type="Texture" id=12]
[ext_resource path="res://scenes/core/ViewportContainer.gd" type="Script" id=13]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="ButtonGroup" id=5]

[node name="Editor" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpArea" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 664.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Palette" type="VBoxContainer" parent="VBoxContainer/OpArea"]
margin_right = 104.0
margin_bottom = 664.0
size_flags_vertical = 3
custom_constants/separation = 16

[node name="Palette" parent="VBoxContainer/OpArea/Palette" instance=ExtResource( 5 )]
margin_right = 104.0

[node name="ColorCode" type="LineEdit" parent="VBoxContainer/OpArea/Palette"]
margin_top = 552.0
margin_right = 104.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 48 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 6 )
text = "#000000"
placeholder_text = "#000000"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/OpArea/Palette"]
margin_top = 616.0
margin_right = 104.0
margin_bottom = 664.0
rect_min_size = Vector2( 0, 48 )
custom_constants/separation = 8
alignment = 1

[node name="Add" type="Button" parent="VBoxContainer/OpArea/Palette/HBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
text = "+"
clip_text = true

[node name="Delete" type="Button" parent="VBoxContainer/OpArea/Palette/HBoxContainer"]
margin_left = 56.0
margin_right = 104.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
text = "-"
clip_text = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/OpArea"]
margin_left = 112.0
margin_right = 1280.0
margin_bottom = 664.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="ToolOptions" type="HBoxContainer" parent="VBoxContainer/OpArea/VBoxContainer"]
margin_right = 1168.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )

[node name="Size" type="SpinBox" parent="VBoxContainer/OpArea/VBoxContainer/ToolOptions"]
margin_right = 128.0
margin_bottom = 48.0
rect_min_size = Vector2( 128, 48 )
value = 1.0
rounded = true
align = 1
suffix = "px"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/OpArea/VBoxContainer"]
margin_top = 56.0
margin_right = 1168.0
margin_bottom = 664.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer"]
margin_right = 1112.0
margin_bottom = 608.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer"]
margin_right = 1104.0
margin_bottom = 720.0
rect_min_size = Vector2( 720, 720 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer/Panel/CenterContainer"]
margin_left = 552.0
margin_top = 360.0
margin_right = 552.0
margin_bottom = 360.0
custom_styles/panel = SubResource( 1 )

[node name="Bg" type="TextureRect" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer/Panel/CenterContainer/Panel"]
margin_left = -73.0
margin_top = -119.0
margin_right = -41.0
margin_bottom = -87.0
rect_scale = Vector2( 5, 5 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer/Panel/CenterContainer/Panel/Bg"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 32, 32 )
stretch = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer/Panel/CenterContainer/Panel/Bg/ViewportContainer"]
size = Vector2( 32, 32 )
transparent_bg = true
handle_input_locally = false
render_target_clear_mode = 1
render_target_update_mode = 3

[node name="Canvas" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer/Panel/CenterContainer/Panel/Bg/ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="ScrollContainer2" type="ScrollContainer" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer"]
margin_left = 1120.0
margin_right = 1168.0
margin_bottom = 608.0
rect_min_size = Vector2( 48, 0 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer2"]
margin_right = 48.0
margin_bottom = 608.0
size_flags_vertical = 3

[node name="Select" type="Button" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer2/VBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
toggle_mode = true
group = SubResource( 5 )
icon = ExtResource( 7 )
expand_icon = true

[node name="Pencil" type="Button" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer2/VBoxContainer"]
margin_top = 56.0
margin_right = 48.0
margin_bottom = 104.0
rect_min_size = Vector2( 48, 48 )
toggle_mode = true
pressed = true
group = SubResource( 5 )
icon = ExtResource( 6 )
expand_icon = true

[node name="Eraser" type="Button" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer2/VBoxContainer"]
margin_top = 112.0
margin_right = 48.0
margin_bottom = 160.0
rect_min_size = Vector2( 48, 48 )
toggle_mode = true
group = SubResource( 5 )
icon = ExtResource( 8 )
expand_icon = true

[node name="Eyedropper" type="Button" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer2/VBoxContainer"]
margin_top = 168.0
margin_right = 48.0
margin_bottom = 216.0
rect_min_size = Vector2( 48, 48 )
toggle_mode = true
group = SubResource( 5 )
icon = ExtResource( 9 )
expand_icon = true

[node name="Move" type="Button" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer2/VBoxContainer"]
margin_top = 224.0
margin_right = 48.0
margin_bottom = 272.0
rect_min_size = Vector2( 48, 48 )
toggle_mode = true
group = SubResource( 5 )
icon = ExtResource( 11 )
expand_icon = true

[node name="Bucket" type="Button" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer2/VBoxContainer"]
margin_top = 280.0
margin_right = 48.0
margin_bottom = 328.0
rect_min_size = Vector2( 48, 48 )
toggle_mode = true
group = SubResource( 5 )
icon = ExtResource( 12 )
expand_icon = true

[node name="Line" type="Button" parent="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer2/VBoxContainer"]
margin_top = 336.0
margin_right = 48.0
margin_bottom = 384.0
rect_min_size = Vector2( 48, 48 )
toggle_mode = true
group = SubResource( 5 )
icon = ExtResource( 10 )
expand_icon = true

[node name="InfoBar" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 672.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 48 )

[node name="PenPosLabel" type="Label" parent="VBoxContainer/InfoBar"]
margin_top = 12.0
margin_bottom = 36.0

[node name="SizeLabel" type="Label" parent="VBoxContainer/InfoBar"]
margin_left = 8.0
margin_top = 12.0
margin_right = 8.0
margin_bottom = 36.0

[node name="ZoomLevel" type="SpinBox" parent="VBoxContainer/InfoBar"]
margin_left = 1152.0
margin_right = 1280.0
margin_bottom = 48.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 10
min_value = 10.0
max_value = 500.0
value = 100.0
align = 1
suffix = "%"

[node name="DebugLabel" type="Label" parent="."]
margin_top = 348.0
margin_right = 1280.0
margin_bottom = 372.0
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2

[node name="PopupPanel" type="PopupPanel" parent="CenterContainer"]
margin_left = 471.0
margin_top = 84.0
margin_right = 809.0
margin_bottom = 636.0

[node name="ColorPicker" type="ColorPicker" parent="CenterContainer/PopupPanel"]
margin_left = 8.0
margin_top = 16.0
margin_right = 330.0
margin_bottom = 536.0
presets_enabled = false
presets_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="color_selected" from="VBoxContainer/OpArea/Palette/Palette" to="." method="_on_Palette_color_selected"]
[connection signal="text_changed" from="VBoxContainer/OpArea/Palette/ColorCode" to="." method="_on_ColorCode_text_changed"]
[connection signal="pressed" from="VBoxContainer/OpArea/Palette/HBoxContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="draw" from="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer/Panel/CenterContainer/Panel/Bg/ViewportContainer/Viewport/Canvas" to="." method="_on_Canvas_draw"]
[connection signal="stroke_finished" from="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer/Panel/CenterContainer/Panel/Bg/ViewportContainer/Viewport/Canvas" to="." method="_on_Canvas_stroke_finished"]
[connection signal="toggled" from="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer2/VBoxContainer/Pencil" to="." method="_on_Pencil_toggled"]
[connection signal="toggled" from="VBoxContainer/OpArea/VBoxContainer/HBoxContainer/ScrollContainer2/VBoxContainer/Eraser" to="." method="_on_Eraser_toggled"]
[connection signal="color_changed" from="CenterContainer/PopupPanel/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
